# ros_deep_net_client

./: CMakeLists.txt  README.md  package.xml
src/: image_object_detect_client.py  url_object_detect_client.py
